[tool.poetry]
name = "TWallet"
version = "0.1.0"
description = ""
authors = ["elevensheep <527223709@qq.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
easy-auth = {extras = ["all"], version = "^2.0.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
